@@ -252,3 +252,4 @@
 	+ IsDataChanged() - returns true if data in grid were edited
 	+ Crlc-C creates now 2 clipboards - one internal and one textual
 	+ AskRemove() - if set question is shown before deleting a row
+	+ editing of row was possible (through double click) even if editing flag was not set
